Trying to fix blog text alignment

--- a/css/style.css
+++ b/css/style.css
@@ -22,22 +22,6 @@
   font-style: italic;
 }
 
-.PostBody{
-  text-align: justify;
-  padding-left: 10%;
-  padding-right: 10%;
-}
-.PostBody a { color: #3366CC; text-decoration: none}
-
-.PostDate{
-  margin-bottom: -20px;
-  font-size: 15px;
-  text-align: justify;
-  padding-left: 10%;
-  padding-right: 10%;
-  font-style: italic;
-}
-
 .upper
 {
   background-color: transparent;
